--- a/index.html
+++ b/index.html
@@ -20,39 +20,57 @@
     <br>
     <div class="container">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div id="profile-wrapper" class="card card-body">
-                    <img id="profile-picture" src="profile.jpg">
+                    <img id="profile-picture" src="media/profile.jpg">
                     <hr>
-                    <h4>Hey, I'm Cristian!</h4>
+                    <h4>Hello, there!</h4>
+
+
                 </div>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8 d-flex">
                 <div class="card card-body">
 
                     <!-- Short bio here !!! -->
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi molestias iste officia nostrum!
-                    Sequi vel, ducimus aspernatur odit quia praesentium. Magnam voluptatibus maxime autem optio
-                    recusandae in nihil fuga perspiciatis.
-                    Alias voluptates odio magni. Incidunt, voluptatibus? Tempore, laborum? Eveniet quam ratione sunt
-                    sapiente sed, ex voluptates cumque porro! Ex id provident, nisi ipsam laboriosam et temporibus unde
-                    magnam repudiandae officia.
-                    Labore recusandae consequuntur corrupti facilis soluta dicta voluptatem voluptates optio ad animi,
-                    nisi eum delectus facere natus, nobis veritatis iure distinctio consequatur. Autem quod quidem aut
-                    animi, sint labore quo.
-                    Recusandae, fugit soluta error esse saepe non, temporibus minima suscipit molestiae sequi atque
-                    praesentium? Sit corporis voluptatem similique omnis culpa, ut aliquid rerum soluta consequuntur,
-                    quasi ipsa? Dignissimos, repudiandae temporibus?
+                    <p style="text-align: justify;">
+                        Aficionado por tecnologia, optei por estudar Engenharia da Computação para aprender o estado da arte
+                        tecnológico da minha geração. Fiz intercâmbio de 2013 a 2014 nos Estados Unidos como bolsista do
+                        programa Ciências sem Fronteiras do Governo Federal. Em 2017 me afastei da universidade para entrar
+                        no mercado de trabalho, retornando em 2020 para conclusão do curso. Tenho interesse nas áreas
+                        aplicadas da engenharia e computação, como processamento digital de sinais, computação aplicada à
+                        medicina, telemedicina e <i>Business Inteligence</i>.
+                    </p>
+
+                    <ul class="social-links">
+                        <li><a href="https://instagram.com/http.maruan"><img src="media/instagram.png" alt="" class="social"></a></li>
+                        <li><a href="https://www.linkedin.com/in/cmaruan/"><img src="media/linkedin.png" alt="" class="social"></a></li>
+                        <li><a href="mailto://cmaruanbosin@gmail.com"><img src="media/mail.png" alt="" class="social"></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
         <br>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
 
-                <h3>SKILLS</h3>
+                <h3>EDUCAÇÃO</h3>
                 <hr>
-                <h5 class="theme-gray">Technical</h5>
+                <ul class="theme-list">
+                    <li class="theme-list-item">
+                        <div class="theme-list-focus">2011 - 2020</div>
+                        <h3 class="h5 mb-1 timeline-title">Engenharia da Computação </h3>
+                        <h3 class="h5 mb-1 timeline-subtitle">Universidade Federal de Pelotas</h3>
+                        <h3 class="h5 mb-1 timeline-subtitle theme-gray">Pelotas, RS</h3>
+
+                    </li>
+                </ul>
+
+                <br>
+
+                <h3>HABILIDADES</h3>
+                <hr>
+                <h5 class="theme-gray">Técnicas</h5>
                 <ul class="skills ">
                     <li>
                         <div class="progress ">
@@ -78,16 +96,19 @@
                 </ul>
 
                 <br>
-                <h5 class="theme-gray">Professional</h5>
+                <h5 class="theme-gray">Profissional</h5>
                 <ul class="skills mt-2 ml-3 timeline-bullet-list">
-                    <li>Teamwork</li>
-                    <li>Leadership</li>
-                    <li>Problem Solving</li>
-                    <li>Productivity</li>
+                    <li>Trabalho em Equipe</li>
+                    <li>Liderança</li>
+                    <li>Resolução de Problemas</li>
+                    <li>Produtividade</li>
                 </ul>
+
+                <br>
+
             </div>
-            <div class="col-md-9">
-                <h3>EXPERIENCE</h3>
+            <div class="col-md-8">
+                <h3>EXPERIÊNCIA</h3>
                 <hr>
                 <ul class="timeline">
                     <li class="timeline-item rounded ml-3">
@@ -95,19 +116,19 @@
                         <h2 class="h5 mb-1 timeline-title">Estágio</h2>
                         <h2 class="h5 mb-1 timeline-subtitle">Universidade Federal de Pelotas</h2>
                         <h2 class="h5 mb-1 timeline-subtitle theme-gray">Pelotas, RS</h2>
-                        <ul class="mt-2 ml-3 timeline-bullet-list ">
+                        <ul class="mt-2 timeline-bullet-list ">
                             <li>Compressão de Light Fields: permitindo Multimídia Imersiva por meio de
                                 Realidades Aumentada e Mista </li>
                             <li>Projeto desenvolvido em C++17 </li>
                         </ul>
                     </li>
 
-                    <li class="timeline-item bg-white rounded ml-3">
+                    <li class="timeline-item rounded ml-3">
                         <div class="timeline-period">2017 - 2020</div>
                         <h2 class="h5 mb-0 timeline-title">Analista de Tecnologia da Informação</h2>
                         <h2 class="h5 mb-1 timeline-subtitle">WAM Brasil</h2>
                         <h2 class="h5 mb-1 timeline-subtitle theme-gray">Gramado, RS</h2>
-                        <ul class="mt-2 ml-3 timeline-bullet-list ">
+                        <ul class="mt-2 timeline-bullet-list ">
                             <li>Gerenciamento e manutenção de rede de computadores; </li>
                             <li>Instalação e configuração de computadores, servidores e impressoras; </li>
                             <li>Gestão e controle de estoque;</li>
@@ -115,24 +136,24 @@
                         </ul>
                     </li>
 
-                    <li class="timeline-item bg-white rounded ml-3">
+                    <li class="timeline-item rounded ml-3">
                         <div class="timeline-period">2015 - 2017</div>
                         <h2 class="h5 mb-0 timeline-title">Instrutor de Inglês</h2>
                         <h2 class="h5 mb-1 timeline-subtitle">MAB Centro de Idiomas</h2>
                         <h2 class="h5 mb-1 timeline-subtitle theme-gray">Pelotas, RS</h2>
-                        <ul class="mt-2 ml-3 timeline-bullet-list ">
+                        <ul class="mt-2 timeline-bullet-list ">
                             <li>Aulas particulares e para pequenas turmas de jovens e adultos; </li>
                             <li>Preparação de aulas e testes; </li>
                             <li>Atividades Pedagógicas;</li>
                         </ul>
                     </li>
 
-                    <li class="timeline-item bg-white rounded ml-3">
-                        <div class="timeline-period">2013-2014</div>
+                    <li class="timeline-item rounded ml-3">
+                        <div class="timeline-period">2013 - 2014</div>
                         <h2 class="h5 mb-0 timeline-title">Intercâmbio - Ciências sem Fronteiras </h2>
                         <h2 class="h5 mb-1 timeline-subtitle">Stony Brook University</h2>
                         <h2 class="h5 mb-1 timeline-subtitle theme-gray">New York, USA</h2>
-                        <ul class="mt-2 ml-3 timeline-bullet-list ">
+                        <ul class="mt-2 timeline-bullet-list ">
                             <li>Programa de graduação sanduiche de 18 meses nos Estados Unidos; </li>
                         </ul>
                     </li>
@@ -140,8 +161,6 @@
             </div>
         </div>
     </div>
-
-
 
 
 
