Adjusted social media link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="card card-body">
 
                     <!-- Short bio here !!! -->
-                    <p style="text-align: justify;">
+                    <p class="short-bio">
                         Aficionado por tecnologia, optei por estudar Engenharia da Computação para aprender o estado da arte
                         tecnológico da minha geração. Fiz intercâmbio de 2013 a 2014 nos Estados Unidos como bolsista do
                         programa Ciências sem Fronteiras do Governo Federal. Em 2017 me afastei da universidade para entrar
