--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <ul class="social-links">
                         <li><a href="https://instagram.com/http.maruan"><img src="media/instagram.png" alt="" class="social"></a></li>
                         <li><a href="https://www.linkedin.com/in/cmaruan/"><img src="media/linkedin.png" alt="" class="social"></a></li>
-                        <li><a href="mailto://cmaruanbosin@gmail.com"><img src="media/mail.png" alt="" class="social"></a></li>
+                        <li><a href="mailto:cmaruanbosin@gmail.com"><img src="media/mail.png" alt="" class="social"></a></li>
                     </ul>
                 </div>
             </div>
