--- a/_index.html
+++ b/_index.html
@@ -22,32 +22,30 @@
         <div class="row">
             <div class="col-md-4">
                 <div id="profile-wrapper" class="card card-body">
-                    <img id="profile-picture" src="media/profile.png">
+                    <img id="profile-picture" src="media/profile.jpg">
                     <hr>
-                    <h4>Hello, I'm Cristian!</h4>
+                    <h4>Hello, there!</h4>
 
 
                 </div>
             </div>
             <div class="col-md-8 d-flex">
-                <div class="card card-body card-bio">
-                    <h3 class="name">Cristian Maruan Bosin</h3>
+                <div class="card card-body">
+
                     <!-- Short bio here !!! -->
                     <p class="short-bio">
-                        Technology enthusiast, I love learning new things!
-                        <br />
-                        Interests range from Medical and Health Care Applications, Embedded Systems,
-                        Computer Vision, Digital Signal Processing to Business Inteligence.
+                        Aficionado por tecnologia, optei por estudar Engenharia da Computação para aprender o estado da arte
+                        tecnológico da minha geração. Fiz intercâmbio de 2013 a 2014 nos Estados Unidos como bolsista do
+                        programa Ciências sem Fronteiras do Governo Federal. Em 2017 me afastei da universidade para entrar
+                        no mercado de trabalho, retornando em 2020 para conclusão do curso. Tenho interesse nas áreas
+                        aplicadas da engenharia e computação, como processamento digital de sinais, computação aplicada à
+                        medicina, telemedicina e <i>Business Inteligence</i>.
                     </p>
 
                     <ul class="social-links">
-                        <li><a href="https://instagram.com/cmaruan"><img src="media/instagram.png" alt=""
-                                    class="social"></a> <span class="social-text">@cmaruan</span> </li>
-                        <li><a href="https://www.linkedin.com/in/cmaruan/"><img src="media/linkedin.png" alt=""
-                                    class="social"></a> <span class="social-text">/cmaruan</span> </li>
-                        <li><a href="mailto:cmaruanbosin@gmail.com"><img src="media/mail.png" alt="" class="social"></a>
-                            <span class="social-text">cmaruanbosin@gmail.com</span>
-                        </li>
+                        <li><a href="https://instagram.com/http.maruan"><img src="media/instagram.png" alt="" class="social"></a></li>
+                        <li><a href="https://www.linkedin.com/in/cmaruan/"><img src="media/linkedin.png" alt="" class="social"></a></li>
+                        <li><a href="mailto:cmaruanbosin@gmail.com"><img src="media/mail.png" alt="" class="social"></a></li>
                     </ul>
                 </div>
             </div>
@@ -56,32 +54,23 @@
         <div class="row">
             <div class="col-md-4">
 
-                <h3>EDUCATION</h3>
+                <h3>EDUCAÇÃO</h3>
                 <hr>
                 <ul class="theme-list">
                     <li class="theme-list-item">
-                        <div class="theme-list-focus">2021 - now </div>
-                        <h3 class="h5 mb-1 timeline-title">M.Sc. Post Graduate Program in Computing</h3>
-                        <h3 class="h5 mb-1 timeline-subtitle">Universidade Federal de Pelotas</h3>
-                        <h3 class="h5 mb-1 timeline-subtitle theme-gray">Pelotas/RS Brazil</h3>
-
-                    </li>
-                </ul>
-                <ul class="theme-list">
-                    <li class="theme-list-item">
                         <div class="theme-list-focus">2011 - 2020</div>
-                        <h3 class="h5 mb-1 timeline-title">B.Sc. Computer Engineering </h3>
+                        <h3 class="h5 mb-1 timeline-title">Engenharia da Computação </h3>
                         <h3 class="h5 mb-1 timeline-subtitle">Universidade Federal de Pelotas</h3>
-                        <h3 class="h5 mb-1 timeline-subtitle theme-gray">Pelotas/RS Brazil</h3>
+                        <h3 class="h5 mb-1 timeline-subtitle theme-gray">Pelotas, RS</h3>
 
                     </li>
                 </ul>
 
                 <br>
 
-                <h3>SKILLS</h3>
+                <h3>HABILIDADES</h3>
                 <hr>
-                <h5 class="theme-gray">Technical</h5>
+                <h5 class="theme-gray">Técnicas</h5>
                 <ul class="skills ">
                     <li>
                         <div class="progress ">
@@ -90,7 +79,7 @@
                     </li>
                     <li>
                         <div class="progress">
-                            <div class="progress-bar theme-blue-bg" role="progressbar" style="width: 90%"> PYTHON </div>
+                            <div class="progress-bar theme-blue-bg" role="progressbar" style="width: 85%"> PYTHON </div>
                         </div>
                     </li>
                     <li>
@@ -100,75 +89,72 @@
                     </li>
                     <li>
                         <div class="progress">
-                            <div class="progress-bar theme-blue-bg" role="progressbar" style="width: 80%"> JAVASCRIPT
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="progress">
-                            <div class="progress-bar theme-blue-bg" role="progressbar" style="width: 70%"> REACT
+                            <div class="progress-bar theme-blue-bg" role="progressbar" style="width: 70%"> JAVASCRIPT
                             </div>
                         </div>
                     </li>
                 </ul>
 
                 <br>
-                <h5 class="theme-gray">Professional</h5>
+                <h5 class="theme-gray">Profissional</h5>
                 <ul class="skills mt-2 ml-3 timeline-bullet-list">
-                    <li>Teamwork</li>
-                    <li>Lidership</li>
-                    <li>Problem Solving</li>
-                    <li>Productivity</li>
+                    <li>Trabalho em Equipe</li>
+                    <li>Liderança</li>
+                    <li>Resolução de Problemas</li>
+                    <li>Produtividade</li>
                 </ul>
 
                 <br>
 
             </div>
             <div class="col-md-8">
-                <h3>EXPERIENCE</h3>
+                <h3>EXPERIÊNCIA</h3>
                 <hr>
                 <ul class="timeline">
                     <li class="timeline-item rounded ml-3">
                         <div class="timeline-period">2020</div>
-                        <h2 class="h5 mb-1 timeline-title">Intership</h2>
+                        <h2 class="h5 mb-1 timeline-title">Estágio</h2>
                         <h2 class="h5 mb-1 timeline-subtitle">Universidade Federal de Pelotas</h2>
                         <h2 class="h5 mb-1 timeline-subtitle theme-gray">Pelotas, RS</h2>
                         <ul class="mt-2 timeline-bullet-list ">
-                            <li>Light Field Coding</li>
-                            <li>Project developed in Python andC++17 </li>
+                            <li>Compressão de Light Fields: permitindo Multimídia Imersiva por meio de
+                                Realidades Aumentada e Mista </li>
+                            <li>Projeto desenvolvido em C++17 </li>
                         </ul>
                     </li>
 
                     <li class="timeline-item rounded ml-3">
                         <div class="timeline-period">2017 - 2020</div>
-                        <h2 class="h5 mb-0 timeline-title">Information Technology Analyst</h2>
+                        <h2 class="h5 mb-0 timeline-title">Analista de Tecnologia da Informação</h2>
                         <h2 class="h5 mb-1 timeline-subtitle">WAM Brasil</h2>
                         <h2 class="h5 mb-1 timeline-subtitle theme-gray">Gramado, RS</h2>
                         <ul class="mt-2 timeline-bullet-list ">
-                            <li>Management and maintenance of computer networks</li>
-                            <li>Configuration and setup of computers, servers and printers</li>
-                            <li>Warehouse management</li>
-                            <li>Documentaton and software training</li>
+                            <li>Gerenciamento e manutenção de rede de computadores; </li>
+                            <li>Instalação e configuração de computadores, servidores e impressoras; </li>
+                            <li>Gestão e controle de estoque;</li>
+                            <li>Documentação e elaboração de manuais de uso para treinamento da equipe.</li>
                         </ul>
                     </li>
 
                     <li class="timeline-item rounded ml-3">
                         <div class="timeline-period">2015 - 2017</div>
-                        <h2 class="h5 mb-0 timeline-title">Engish Instructor</h2>
+                        <h2 class="h5 mb-0 timeline-title">Instrutor de Inglês</h2>
                         <h2 class="h5 mb-1 timeline-subtitle">MAB Centro de Idiomas</h2>
                         <h2 class="h5 mb-1 timeline-subtitle theme-gray">Pelotas, RS</h2>
                         <ul class="mt-2 timeline-bullet-list ">
-                            <li>Private classes for young and adults</li>
+                            <li>Aulas particulares e para pequenas turmas de jovens e adultos; </li>
+                            <li>Preparação de aulas e testes; </li>
+                            <li>Atividades Pedagógicas;</li>
                         </ul>
                     </li>
 
                     <li class="timeline-item rounded ml-3">
                         <div class="timeline-period">2013 - 2014</div>
-                        <h2 class="h5 mb-0 timeline-title">Exchange Student</h2>
+                        <h2 class="h5 mb-0 timeline-title">Intercâmbio - Ciências sem Fronteiras </h2>
                         <h2 class="h5 mb-1 timeline-subtitle">Stony Brook University</h2>
                         <h2 class="h5 mb-1 timeline-subtitle theme-gray">New York, USA</h2>
                         <ul class="mt-2 timeline-bullet-list ">
-                            <li>Sandwich undergrad program sponsored by the Brazilian Government</li>
+                            <li>Programa de graduação sanduiche de 18 meses nos Estados Unidos; </li>
                         </ul>
                     </li>
                 </ul>
